@@ -351,7 +351,6 @@ ZBX_MEM_FUNC_IMPL(__config, config_mem);
 static unsigned int	sync_num = 0;
 
 static const char	*INTERNED_SERVER_STATUS_KEY;
-static const char	*INTERNED_SERVER_ZABBIXLOG_KEY;
 
 static void	poller_by_item(zbx_uint64_t itemid, zbx_uint64_t proxy_hostid,
 				unsigned char item_type, const char *key,
@@ -365,7 +364,7 @@ static void	poller_by_item(zbx_uint64_t itemid, zbx_uint64_t proxy_hostid,
 		return;
 	}
 
-	if (INTERNED_SERVER_STATUS_KEY == key || INTERNED_SERVER_ZABBIXLOG_KEY == key)
+	if (INTERNED_SERVER_STATUS_KEY == key)
 	{
 		*poller_type = ZBX_NO_POLLER;
 		return;
@@ -2798,7 +2797,6 @@ void	init_configuration_cache()
 	zbx_strpool_create(strpool_size);
 
 	INTERNED_SERVER_STATUS_KEY = zbx_strpool_intern(SERVER_STATUS_KEY);
-	INTERNED_SERVER_ZABBIXLOG_KEY = zbx_strpool_intern(SERVER_ZABBIXLOG_KEY);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
@@ -3631,7 +3629,7 @@ int	DCconfig_get_poller_items(unsigned char poller_type, DC_ITEM *items, int max
  *                                                                            *
  * Author: Alexander Vladishev, Aleksandrs Saveljevs                          *
  *                                                                            *
- * Comments: only used for SERVER_ZABBIXLOG_KEY and SERVER_STATUS_KEY items   *
+ * Comments: only used for SERVER_STATUS_KEY items                            *
  *                                                                            *
  ******************************************************************************/
 int	DCconfig_get_items(zbx_uint64_t hostid, const char *key, DC_ITEM **items)
