@@ -550,13 +550,13 @@ void	DBupdate_triggers_status_after_restart()
 				" and h.status in (%d)"
 				" and i.status in (%d)"
 				" and i.type not in (%d)"
-				" and i.key_ not in ('%s','%s')"
+				" and i.key_ not in ('%s')"
 				" and t.status in (%d)"
 				DB_NODE,
 			HOST_STATUS_MONITORED,
 			ITEM_STATUS_ACTIVE,
 			ITEM_TYPE_TRAPPER,
-			SERVER_STATUS_KEY, SERVER_ZABBIXLOG_KEY,
+			SERVER_STATUS_KEY,
 			TRIGGER_STATUS_ENABLED,
 			DBnode_local("t.triggerid"));
 
@@ -767,7 +767,7 @@ int	DBget_queue_count(int from, int to)
 				" and h.status=%d"
 				" and i.status=%d"
 				" and i.value_type not in (%d)"
-				" and i.key_ not in ('%s','%s')"
+				" and i.key_ not in ('%s')"
 				" and ("
 					"i.lastclock is not null"
 					" and i.lastclock<%d"
@@ -783,7 +783,7 @@ int	DBget_queue_count(int from, int to)
 			HOST_STATUS_MONITORED,
 			ITEM_STATUS_ACTIVE,
 			ITEM_VALUE_TYPE_LOG,
-			SERVER_STATUS_KEY, SERVER_ZABBIXLOG_KEY,
+			SERVER_STATUS_KEY,
 			now - from,
 				ITEM_TYPE_ZABBIX_ACTIVE, ITEM_TYPE_SSH, ITEM_TYPE_TELNET,
 				ITEM_TYPE_SIMPLE, ITEM_TYPE_INTERNAL, ITEM_TYPE_DB_MONITOR,
