@@ -22,7 +22,6 @@
 #include "cfg.h"
 #include "db.h"
 #include "log.h"
-#include "zlog.h"
 #include "daemon.h"
 #include "zbxmedia.h"
 #include "zbxserver.h"
@@ -106,7 +105,6 @@ int	execute_action(DB_ALERT *alert, DB_MEDIATYPE *mediatype, char *error, int ma
 
 			/* execl() returns only when an error occurs */
 			zabbix_log(LOG_LEVEL_ERR, "error executing [%s]: %s", full_path, zbx_strerror(errno));
-			zabbix_syslog("error executing [%s]: %s", full_path, zbx_strerror(errno));
 			exit(0);
 		}
 	}
@@ -114,7 +112,6 @@ int	execute_action(DB_ALERT *alert, DB_MEDIATYPE *mediatype, char *error, int ma
 	{
 		zbx_snprintf(error, max_error_len, "unsupported media type [%d]", mediatype->type);
 		zabbix_log(LOG_LEVEL_ERR, "alert ID [" ZBX_FS_UI64 "]: %s", alert->alertid, error);
-		zabbix_syslog("alert ID [" ZBX_FS_UI64 "]: %s", alert->alertid, error);
 	}
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%s", __function_name, zbx_result_string(res));
@@ -194,10 +191,7 @@ void	main_alerter_loop()
 			}
 			else
 			{
-				zabbix_log(LOG_LEVEL_DEBUG, "Error sending alert ID [" ZBX_FS_UI64 "]",
-					alert.alertid);
-				zabbix_syslog("Error sending alert ID [" ZBX_FS_UI64 "]",
-					alert.alertid);
+				zabbix_log(LOG_LEVEL_DEBUG, "Error sending alert ID [" ZBX_FS_UI64 "]", alert.alertid);
 
 				error_esc = DBdyn_escape_string_len(error, ALERT_ERROR_LEN);
 
