@@ -39,7 +39,6 @@ insert into help_items values (5,'zabbix[history_text]','Number of values stored
 insert into help_items values (5,'zabbix[history_uint]','Number of values stored in table HISTORY_UINT.');
 insert into help_items values (5,'zabbix[items]','Number of items in Zabbix database.');
 insert into help_items values (5,'zabbix[items_unsupported]','Number of unsupported items in Zabbix database.');
-insert into help_items values (5,'zabbix[log]','Stores warning and error messages generated by Zabbix server.');
 insert into help_items values (5,'zabbix[proxy,&lt;name&gt;,&lt;param&gt;]','Time of proxy last access. Name - proxy name. Param - lastaccess. Unix timestamp.');
 insert into help_items values (5,'zabbix[queue&lt;,from&gt;&lt;,to&gt;]','Number of items in the queue which are delayed by from to to seconds, inclusive.');
 insert into help_items values (5,'zabbix[rcache,&lt;cache&gt;,&lt;mode&gt;]','Configuration cache statistics. Cache - buffer (modes: pfree, total, used, free).');
